--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dejanor",
+  "name": "Janortop5",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,6 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "blac",
+  "author": "Blac",
   "license": "MIT"
 }
